Update files (recommend)

--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1415,
-   "id": "f0af7186",
+   "id": "dd51844b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1416,
-   "id": "f1781818",
+   "id": "56bc8995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1417,
-   "id": "1b6ea7b0",
+   "id": "f3de941a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1418,
-   "id": "ed7bfac9",
+   "id": "79770cbe",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1419,
-   "id": "67fa3ff8",
+   "id": "bfeaa858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1420,
-   "id": "7119c0ef",
+   "id": "53a277c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1421,
-   "id": "9941b06c",
+   "id": "f5269280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1422,
-   "id": "de673685",
+   "id": "d01caf28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1423,
-   "id": "d343f798",
+   "id": "a3e6ada0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1424,
-   "id": "5f88bcc7",
+   "id": "f8b93f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1425,
-   "id": "d1a41099",
+   "id": "049680e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1426,
-   "id": "70da7547",
+   "id": "3ad4f6fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1427,
-   "id": "e653caee",
+   "id": "478755bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1428,
-   "id": "7f283c95",
+   "id": "34cbfddc",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1429,
-   "id": "d6c738ed",
+   "id": "add440bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1430,
-   "id": "0daf25a1",
+   "id": "53a43ac1",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1431,
-   "id": "797da296",
+   "id": "48345ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1432,
-   "id": "46d4683f",
+   "id": "f3a68b4d",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1433,
-   "id": "7d785427",
+   "id": "81be5431",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1434,
-   "id": "048fb7e7",
+   "id": "c9f5ebb9",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1435,
-   "id": "10511dab",
+   "id": "d027f2c2",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1436,
-   "id": "0b4004f5",
+   "id": "51aa433b",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1437,
-   "id": "1b120051",
+   "id": "31fa50e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1438,
-   "id": "e4f34384",
+   "id": "45e3034a",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1439,
-   "id": "35628a38",
+   "id": "388259d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1440,
-   "id": "76781863",
+   "id": "deb1e168",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1441,
-   "id": "d32ab483",
+   "id": "b1412ea0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1442,
-   "id": "1bc4d005",
+   "id": "0a1ccbbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1443,
-   "id": "5d6ba40c",
+   "id": "66de7739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1444,
-   "id": "1b58c489",
+   "id": "aee499b1",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1445,
-   "id": "0724da6f",
+   "id": "526ed617",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1446,
-   "id": "9479b7de",
+   "id": "adfd2e1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2021,7 +2021,7 @@
   {
    "cell_type": "code",
    "execution_count": 1447,
-   "id": "72802ed1",
+   "id": "7ab760a5",
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 1448,
-   "id": "e55f06ed",
+   "id": "e9e57ae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,13 +2069,13 @@
     "    for i in movies_list:\n",
     "        recommended_movies.append(movies.iloc[i[0]].clean_title)\n",
     "\n",
-    "    return recommended_movies, movies_list"
+    "    return recommended_movies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1453,
-   "id": "4ecb423d",
+   "id": "12e546c5",
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 1450,
-   "id": "3d09b476",
+   "id": "1974202b",
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": 1451,
-   "id": "7ad2cd61",
+   "id": "c3f537e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,8 +2147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1455,
-   "id": "063428e1",
+   "execution_count": 1456,
+   "id": "6ca7110f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ed0952",
+   "id": "01ce7740",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec2-testmovierec2-9ranf7.streamlit.app/)"
