Update last line of code for export

--- a/movie-rec.ipynb
+++ b/movie-rec.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1460,
-   "id": "fda93855",
+   "id": "8052cc79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1461,
-   "id": "68148fd8",
+   "id": "2c6e7939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1462,
-   "id": "06301480",
+   "id": "be88ef5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1463,
-   "id": "ce07b3e5",
+   "id": "2e49f441",
    "metadata": {},
    "outputs": [
     {
@@ -66,13 +66,13 @@
    "source": [
     "# |exporti\n",
     "\n",
-    "#create title for web app\n",
+    "# create title for web app\n",
     "st.title(\":blue[Fanz O' Filmz] Movie Recommender\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88a3c06e",
+   "id": "d72d5236",
    "metadata": {},
    "source": [
     "### Import data and prepare data for exploring"
@@ -81,33 +81,33 @@
   {
    "cell_type": "code",
    "execution_count": 1464,
-   "id": "f2c09989",
+   "id": "bf5bf875",
    "metadata": {},
    "outputs": [],
    "source": [
     "# |exporti \n",
     "\n",
-    "#import data to dataframe\n",
+    "# import data to dataframe\n",
     "df = pd.read_csv('data/IMDb_All_Genres_etf_clean1.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1465,
-   "id": "9c64dbec",
+   "id": "a397a147",
    "metadata": {},
    "outputs": [],
    "source": [
     "# |exporti\n",
     "\n",
-    "#create copy of dataframe for editing to prevent errors, selecting features used for recommendations\n",
+    "# create copy of dataframe for editing to prevent errors, selecting features used for recommendations\n",
     "movies = df[['Movie_Title', 'Year', 'Director', 'Actors', 'main_genre', 'side_genre']].copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1466,
-   "id": "21cf8453",
+   "id": "48affc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 1467,
-   "id": "ab7bf064",
+   "id": "7b890a87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 1468,
-   "id": "1b45d118",
+   "id": "7e291f9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 1469,
-   "id": "a8a4e810",
+   "id": "9df11054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 1470,
-   "id": "81d722c8",
+   "id": "883dc6f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 1471,
-   "id": "71cfa6d2",
+   "id": "2fc5fa76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 1472,
-   "id": "d5a8637b",
+   "id": "5f27f0d6",
    "metadata": {},
    "outputs": [
     {
@@ -217,20 +217,20 @@
   {
    "cell_type": "code",
    "execution_count": 1473,
-   "id": "eda79832",
+   "id": "2252df6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# |exporti\n",
     "\n",
     "# remove duplicate rows from dataframe\n",
-    "movies = movies.drop_duplicates(subset=['clean_title']).copy()"
+    "movies = movies.drop_duplicates(subset = ['clean_title']).copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1474,
-   "id": "7eade402",
+   "id": "77f1fae4",
    "metadata": {},
    "outputs": [
     {
@@ -252,20 +252,20 @@
   {
    "cell_type": "code",
    "execution_count": 1475,
-   "id": "0b9bf26e",
+   "id": "54fa5fdb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# |exporti\n",
     "\n",
-    "# reset indexes in dataframe to clear empty duplicate indexes\n",
+    "# reset indices in dataframe to clear empty duplicate indexes\n",
     "movies.reset_index(inplace = True, drop = True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1476,
-   "id": "5871c648",
+   "id": "ab6c6f7c",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 1477,
-   "id": "d62d7b62",
+   "id": "db553d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 1480,
-   "id": "ae6b2bcd",
+   "id": "dbebdf6f",
    "metadata": {},
    "outputs": [
     {
@@ -530,16 +530,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5707df88",
+   "id": "c6f32fed",
    "metadata": {},
    "source": [
-    "### Explore data"
+    "### Explore the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1508,
-   "id": "c137d607",
+   "id": "0bcca09b",
    "metadata": {},
    "outputs": [
     {
@@ -560,19 +560,19 @@
     "# create dataframe to plot genre count data\n",
     "genre_counter_df = pd.DataFrame([genre_counter]).T.reset_index()\n",
     "genre_counter_df.columns = ['Genres', 'Movies']\n",
-    "genre_counter_df = genre_counter_df.sort_values(by='Movies', ascending=False)\n",
+    "genre_counter_df = genre_counter_df.sort_values(by = 'Movies', ascending=False)\n",
     "\n",
     "fig = plt.figure(figsize=(8,4))\n",
-    "sns.barplot(x='Genres', y='Movies', data=genre_counter_df)\n",
+    "sns.barplot(x = 'Genres', y = 'Movies', data = genre_counter_df)\n",
     "plt.title(\"Number of Movies Per Genre\")\n",
-    "plt.xticks(rotation=50)\n",
+    "plt.xticks(rotation = 50)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1501,
-   "id": "37740c71",
+   "id": "77b5eaa3",
    "metadata": {},
    "outputs": [
     {
@@ -593,9 +593,9 @@
     "# create dataframe to plot top 30 actor/movie data\n",
     "actor_counter_df = pd.DataFrame([actor_counter]).T.reset_index()\n",
     "actor_counter_df.columns = ['Actors', 'Movies']\n",
-    "actor_counter_df = actor_counter_df.sort_values(by='Movies', ascending=False)\n",
+    "actor_counter_df = actor_counter_df.sort_values(by = 'Movies', ascending = False)\n",
     "\n",
-    "sns.barplot(data=actor_counter_df.head(30), x='Movies', y='Actors', palette='flare')\n",
+    "sns.barplot(data = actor_counter_df.head(30), x = 'Movies', y = 'Actors', palette = 'flare')\n",
     "plt.title(\"Top 30 Actors Based on Number of Movies Featured In\")\n",
     "plt.show()"
    ]
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 1490,
-   "id": "3c00cd64",
+   "id": "d887eae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,13 +613,13 @@
     "y = 2003\n",
     "\n",
     "def round_down(year):\n",
-    "    return year - (year%10)"
+    "    return year - (year % 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1489,
-   "id": "ab11e53e",
+   "id": "5f9fa120",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 1491,
-   "id": "92e6d2a9",
+   "id": "4d9c4d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 1509,
-   "id": "6c5af6f0",
+   "id": "b88c25a7",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
    ],
    "source": [
     "# plot to count the number of movies released in each decade\n",
-    "sns.countplot(x=movies['decade'], palette='mako')\n",
+    "sns.countplot(x = movies['decade'], palette = 'mako')\n",
     "plt.ylabel(\"Movies\")\n",
     "plt.xlabel(\"Decade\")\n",
     "plt.title(\"Number of Movies Released Per Decade\");"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 1510,
-   "id": "829ccef7",
+   "id": "361b3b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 1511,
-   "id": "21f502e9",
+   "id": "db72491c",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 1512,
-   "id": "f53f4bb0",
+   "id": "f591c007",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,9 +830,9 @@
     "    combined_features = []\n",
     "    for i in range(0, data.shape[0]):\n",
     "        combined_features.append(str(data['decade'][i]) + ' ' +\n",
-    "                                  data['genres'][i] + ' ' +\n",
-    "                                  data['Actors'][i] + ' ' +\n",
-    "                                  data['Director'][i])\n",
+    "                                 data['genres'][i] + ' ' +\n",
+    "                                 data['Actors'][i] + ' ' +\n",
+    "                                 data['Director'][i])\n",
     "        \n",
     "    return combined_features"
    ]
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 1513,
-   "id": "f216c520",
+   "id": "ab91337b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 1514,
-   "id": "301ff9ad",
+   "id": "610f77c1",
    "metadata": {},
    "outputs": [
     {
@@ -987,9 +987,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0f43d30",
+   "metadata": {},
+   "source": [
+    "### Apply Content-Based Filtering model by vectorizing data and measuring cosine similarity between movies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1527,
-   "id": "3473b395",
+   "id": "9ab788a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 1528,
-   "id": "8708ecfc",
+   "id": "2ebfb472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1016,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 1531,
-   "id": "ec3225ad",
+   "id": "e164b2ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1035,7 @@
     "def recommend(movie):\n",
     "    movie_index = movies[movies['clean_title'] == movie].index[0]\n",
     "    cs_distances = cs[movie_index]\n",
-    "    movie_list = sorted(list(enumerate(cs_distances)), reverse=True, key=lambda x: x[1])[1:6]\n",
+    "    movie_list = sorted(list(enumerate(cs_distances)), reverse = True, key = lambda x: x[1])[1:6]\n",
     "\n",
     "    recommended_movies = []\n",
     "    for i in movie_list:\n",
@@ -1039,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": 1532,
-   "id": "1e75e824",
+   "id": "3207456c",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 1450,
-   "id": "f332f610",
+   "id": "83a898d0",
    "metadata": {
     "scrolled": true
    },
@@ -1094,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 1451,
-   "id": "8cc4b19d",
+   "id": "4e424b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,22 +1119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1457,
-   "id": "60b21254",
+   "execution_count": 1533,
+   "id": "9c177e56",
    "metadata": {},
    "outputs": [],
    "source": [
     "# exports all code snippets with the \"|exporti\" comment to a .py file\n",
     "# for use as a Streamlit web app\n",
-    "nb_export(\"testMovieRec2.ipynb\", lib_path=\"./\", name=\"testMovieRec2\")"
+    "nb_export(\"movie-rec.ipynb\", lib_path = \"./\", name = \"movie-rec\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cb0228c4",
+   "id": "451f5ea3",
    "metadata": {},
    "source": [
-    "### Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec2-testmovierec2-9ranf7.streamlit.app/)"
+    "##### Please click the button to open the interactive web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec2-testmovierec2-9ranf7.streamlit.app/)"
    ]
   }
  ],
